# Little-Jerry-AI-Hackathon-2026

./: .env.example  .gitignore  BUSINESS.md  LoadEnv.ps1  Makefile  README.md  claude_desktop_config.json  cognito-update.json  cred_provider_schema.json  cred_schema.json  data-model.md  mcp_server.py  mcp_server_standalone.py  package-lock.json  pyproject.toml  requirements.md  requirements.txt  schema.json  test1.json  test_jira_auth.py  test_jira_boards_and_search.py  test_jira_slack.py  test_mcp_connection.py  test_mcp_tools_detail.py  test_response.json  web-user-flows.md
agents/: Dockerfile
docs/: BAO_MAT.md  FRONTEND.md  HA_TANG_TERRAFORM.md  HE_THONG_AGENT.md  KIEM_THU.md  KIEN_TRUC_HE_THONG.md  LAMBDA_FUNCTIONS.md  MCP-SETUP.md  MCP_GATEWAY.md  MISSING-LAMBDA-APIS-PLAN.md  MISSING-PAGES-PLAN.md  MO_HINH_DU_LIEU.md  PROJECT-DETAIL-CONSOLIDATION-PLAN.md  REPORT-EXPORT-SPEC.md  TAI_LIEU_API.md  TONG_QUAN.md  TRIEN_KHAI.md  WORKFLOW-GUIDE-SHORT.md  api.md  architecture.md  deployment.md  dynamodb.md  institutional-memory-gap-analysis.md  operations.md  security.md
fixtures/: meeting_notes.json  memberships.json  policies.json  programs.json  projects.json  risks.json  sharepoint_sample.json  slack_sample.json  tasks.json  tenants.json  users.json
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend-reactjs/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
lambdas/: Dockerfile
mock-data/: README.md
scripts/: oauth_helper.py  rename-frontend.sh  seed_dynamodb.py  test_mcp.py  update_secrets.ps1
(+401 files in other folders)
